2017-05-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Vault.pm: Set $size to -1 if it is 0. 0 means nothing,
	  -1, means everything

2017-05-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Chunker/Controller.pm: Send SHM_NAME or PORT only if we
	  have a header_port
	* perl/Amanda/Report.pm: Chunker without dumper is a failure
	* perl/Amanda/Report/human.pm: Chunker without dumper is a FAILED
	* server-src/driver.c: Call dumper_chunker_result if chunker failand
	  dumper not yet started
	* server-src/driverio.h (struct dumper_s): Add sent_command
	* xfer-src/element-glue.c (do_directtcp_listen): Correctly print error
	  from resolve_hostname()

2017-05-15  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amjson.c (amjson_s, parse_json_primitive,
	  json_parse_string): Move declaration to amjson.h
	* common-src/amjson.h: Add declaration
	* common-src/ammessage.c: Use amjson type and functions

2017-05-12  Jean-Louis Martineau <JMartineau@carbonite.com>
	* client-src/senddiscover.c: s/read/read/fully/

2017-05-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amjson.c, recover-src/extract_list.c: Fix bug found by
	  coverity

2017-05-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c (tape_action): Use a new tape if it lost less
	  tape space
	* installcheck/tape_action.pl: Add tests

2017-05-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* client-src/runtar.c: Accept --verbose argument

2017-05-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	* ReleaseNotes, NEWS: Typo

2017-05-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	* NEWS, ReleaseNotes: 3.4.4
	* VERSION: 3.4.4

2017-05-02  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/match.c (make_template): Fix
	* installcheck/Amanda_Util.pl: Check fix

2017-04-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amjson.c: Remove debugging statement
